@@ -1,0 +1,70 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "L.-Y. Chen, D. W. Lynch. The optical properties of AuAl<sub>2</sub> and PtAl<sub>2</sub>, <a href=\"https://doi.org/10.1002/pssb.2221480136\"><i>Phys. Status Solidi B</i> <b>148</b>, 387-394 (1988)</a><br>(data points extracted from a figure)"
+COMMENTS: "Bulk sample. Room temperature."
+DATA:
+  - type: tabulated nk
+    data: |
+        0.22 0.77223 1.50089
+        0.23 0.74660 1.52805
+        0.24 0.71779 1.58552
+        0.25 0.74809 1.66843
+        0.26 0.80920 1.75212
+        0.27 0.85933 1.82618
+        0.28 0.89360 1.89752
+        0.29 0.92831 1.98378
+        0.30 0.95010 2.06514
+        0.31 0.99656 2.16038
+        0.32 1.03291 2.23815
+        0.33 1.07859 2.32874
+        0.34 1.12764 2.41016
+        0.35 1.17780 2.47853
+        0.36 1.26273 2.53123
+        0.37 1.33581 2.58501
+        0.38 1.41270 2.61522
+        0.39 1.50579 2.65789
+        0.40 1.60895 2.68716
+        0.41 1.72571 2.71766
+        0.42 1.81972 2.71683
+        0.43 1.90470 2.69341
+        0.44 2.01943 2.64426
+        0.45 2.12342 2.57446
+        0.46 2.17580 2.51793
+        0.47 2.16859 2.43608
+        0.48 2.17688 2.32577
+        0.49 2.17352 2.22701
+        0.50 2.14878 2.14787
+        0.51 2.08404 2.08743
+        0.52 2.02914 2.03897
+        0.53 1.96427 2.00295
+        0.54 1.89174 1.97094
+        0.55 1.81780 1.93836
+        0.56 1.73079 1.93284
+        0.57 1.64063 1.96214
+        0.58 1.56540 2.00312
+        0.59 1.49196 2.04973
+        0.60 1.42092 2.11558
+        0.61 1.35544 2.18166
+        0.62 1.30317 2.25022
+        0.63 1.25677 2.31590
+        0.64 1.21610 2.38085
+        0.65 1.18528 2.44697
+        0.66 1.15716 2.51062
+        0.67 1.13078 2.57581
+        0.68 1.10758 2.64288
+        0.69 1.08647 2.70722
+        0.70 1.06733 2.76899
+        0.71 1.05035 2.82841
+        0.72 1.03479 2.88547
+        0.73 1.02063 2.94656
+        0.74 1.01323 3.00972
+        0.75 1.00664 3.07021
+        0.76 1.00035 3.12805
+        0.77 0.99457 3.18350
+        0.78 0.98938 3.23674
+        0.79 0.98574 3.28824
+SPECS:
+    n_absolute: true
+    wavelength_vacuum: true
